--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@midudev/tailwind-animations": "^0.2.0",
-    "@supabase/supabase-js": "^2.78.0",
-    "@tailwindcss/vite": "^4.1.16",
+    "@midudev/tailwind-animations": "0.2.0",
+    "@supabase/supabase-js": "2.78.0",
+    "@tailwindcss/vite": "4.1.16",
     "astro": "5.15.2",
     "jszip": "3.10.1",
-    "tailwindcss": "^4.1.16",
-    "xlsx": "^0.18.5",
-    "zod": "^3.25.76"
+    "tailwindcss": "4.1.16",
+    "xlsx": "0.20.3",
+    "zod": "3.25.76"
   },
   "overrides": {
-    "jszip": "3.10.1"
+    "jszip": "3.10.1",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   }
 }
